# pai-bench-c-cosmos3

./: .gitignore  README.md
conditional_generation/: README.md  compute_diversity_score.py  compute_metrics.py  pyproject.toml
conditional_generation/benchmark_pipelines/scores/transfer_bench/: depth_to_mp4.py  metrics_canny_blur_depth.py  sam_pickle_to_mp4.py  segmentation_metrics.py  utils.py  video_to_canny_and_blur.py
conditional_generation/benchmark_pipelines/utils/: data_model.py
conditional_generation/models/: dover.py  grounded_sam_v2.py  lpips.py  video_depth_anything.py
conditional_generation/models/video_depth_anything_model/: video_depth.py  video_depth_stream.py
conditional_generation/models/video_depth_anything_model/motion_module/: motion_module.py
conditional_generation/models/video_depth_anything_model/util/: transform.py
conditional_generation/models/video_depth_anything_utils/: dc_utils.py  util.py
conditional_generation/models/video_quality/common/: backbones.py
conditional_generation/schemas/: eff_segmentation.py
conditional_generation/utils/: cattrs_utils.py  model_utils.py  tmp_files.py
generation/: README.md
predict/: README.md
predict/pbench/: vqa_evaluation.py
reason/: README.md
transfer/: README.md  compute_metrics.py  get_checkpoint.sh  pyproject.toml
transfer/models/: dover.py  grounded_sam_v2.py  lpips.py  video_depth_anything.py
transfer/models/video_depth_anything_model/: dinov2.py  dpt_temporal.py
transfer/models/video_quality/common/: data_utils.py
understanding/: README.md
